Kubernetes-Manifests-file/3tier.yml
# MongoDB
---
apiVersion: v1
kind: Service
metadata:
  namespace: 3tier
  name: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb-svc
      protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3tier
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mon
          image: mongo:4.4.6
          command:
            - numactl
            - --interleave=all
            - mongod
            - --wiredTigerCacheSizeGB
            - "0.1"
            - --bind_ip
            - 0.0.0.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-volume-claim

# Backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: 3tier
  labels:
    role: api
    env: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: api
          image: limkel/bcknd:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3500
          livenessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: 3tier
spec:
  ports:
    - port: 3500
      protocol: TCP
  type: ClusterIP
  selector:
    role: api

# Frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 3tier
  labels:
    role: frontend
    env: demo
spec: 
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels: 
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec: 
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: frontend
        image: limkel/ftnd:1.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: 3tier
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP

# Services
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: 3tier
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3tier
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
