Kubernetes-Manifests-file/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: 3tier
  labels:
    role: api
    env: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: api
          image: limkel/3tierbackend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3500
          livenessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: 3tier
spec:
  ports:
    - port: 3500
      protocol: TCP
  type: ClusterIP
  selector:
    role: api
