Kubernetes-Manifests-file/db.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: 3tier
  name: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb-svc
      protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3tier
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mon
          image: mongo:4.4.6
          command:
            - numactl
            - --interleave=all
            - mongod
            - --wiredTigerCacheSizeGB
            - "0.1"
            - --bind_ip
            - 0.0.0.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-volume-claim
