Kubernetes-Manifests-file/mysvc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: 3tier
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3tier
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
